--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "@graphql-tools/load-files": "6.0.18",
     "@graphql-tools/merge": "6.0.18",
     "@graphql-tools/schema": "6.0.18",
+    "@material-ui/core": "4.11.3",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.57",
     "apollo-server-micro": "2.16.1",
     "classnames": "2.2.6",
+    "clsx": "1.1.1",
     "graphql": "15.3.0",
     "graphql-iso-date": "3.6.1",
     "next": "10.0.5",
