--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
     "lint": "eslint src --ext ts --ext tsx --ext js --ext json",
+    "lint-markdown": "markdownlint",
     "generate-favicon": "real-favicon generate ./src/assets/favicon/faviconDescription.json faviconData.json public/favicon && rm faviconData.json"
   },
   "dependencies": {
@@ -76,6 +77,7 @@
     "husky": "^4.3.7",
     "jest": "26.4.0",
     "lint-staged": "^10.5.3",
+    "markdownlint-cli": "^0.26.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.9.7",
