chore: add markdown lint in lintstaged

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,7 @@
 {
+    "*.md": [
+        " yarn lint-markdown *.md --fix"
+    ],
     "*.@(ts|tsx)": [
         "yarn lint",
         "yarn format"
